Split Bach's run method into dedicated methods